--- a/client/package.json
+++ b/client/package.json
@@ -2,18 +2,28 @@
   "name": "typescript-graphql-client",
   "version": "0.0.1",
   "description": "Client part of the TypeScript GraphQL Client Server Project",
-  "main": "index.js",
+  "author": "ramon morcillo @reymon359",
+  "license": "ISC",
   "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "type-check": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "graphql"
   ],
-  "author": "ramon morcillo @reymon359",
-  "license": "ISC",
   "dependencies": {
+    "isomorphic-unfetch": "3.0.0",
     "next": "^9.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.21",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "typescript": "3.7.3"
   }
 }
