--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -1,17 +1,53 @@
-version: "3.3"
-networks:
-  tortilla:
+version: "3.7"
+
 services:
-  postgresql:
+
+  # Postgres DB
+  postgres:
     restart: always
-    image: postgres:12.2-alpine
-    ports:
-      - "5432:5432"
+    image: postgres:12.2-alpine # If we use the build: ./ it will use the Dockerfile
+    container_name: postgres
     environment:
-      - POSTGRES_USER=testuser
-      - POSTGRES_PASSWORD=testpassword
-      - POSTGRES_DB=whatsapp 
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+    ports:
+      - '5432:5432'
     volumes:
       - /var/lib/postgresql/data
-    networks:
-      - tortilla
+    # build: ./postgres
+   
+  # postgresql:
+  #   restart: always
+  #   image: postgres:12.2-alpine
+  #   ports:
+  #     - "5432:5432"
+  #   environment:
+  #     - POSTGRES_USER=testuser
+  #     - POSTGRES_PASSWORD=testpassword
+  #     - POSTGRES_DB=whatsapp 
+  #   volumes:
+  #     - /var/lib/postgresql/data
+
+  # GraphQL API
+  graphql-api:
+    container_name: graphql-api
+    # image: node:12.16.1 If we use the build: ./ it will use the Dockerfile
+    depends_on:
+      - postgres
+    build: ./
+    command: npm start
+    working_dir: /usr/src/graphql-api
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./:/usr/src/graphql-api
+
+
+      
