--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,9 @@
   },
   "private": true,
   "scripts": {
-    "prestart": "yarn codegen",
+    "prestart": "npm run codegen",
     "start": "ts-node index.ts",
-    "prebuild": "yarn codegen",
+    "prebuild": "npm run codegen",
     "prod": "node dist/index.js",
     "build": "tsc",
     "test": "jest --runInBand --forceExit",
@@ -49,25 +49,29 @@
     "@graphql-modules/core": "0.7.17",
     "@graphql-modules/di": "0.7.17",
     "@safe-api/middleware": "0.0.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/morgan": "^1.9.0",
     "apollo-datasource-rest": "0.9.0",
     "apollo-server-express": "2.13.1",
     "apollo-server-testing": "2.13.1",
     "axios": "0.19.2",
     "bcrypt": "4.0.1",
     "cookie": "0.4.1",
-    "cors": "2.8.5",
     "cookie-parser": "1.4.5",
+    "cors": "2.8.5",
     "dataloader": "2.0.0",
     "date-fns": "2.14.0",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "faker": "4.1.0",
     "graphql": "15.0.0",
     "graphql-import": "1.0.2",
-    "graphql-scalars": "1.1.2",
     "graphql-postgres-subscriptions": "1.0.5",
+    "graphql-scalars": "1.1.2",
     "graphql-tools": "5.0.0",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.15",
+    "morgan": "^1.10.0",
     "pg": "8.2.1",
     "reflect-metadata": "0.1.13",
     "sql-template-strings": "2.2.2"
