wip: fix docker compose to run api and db

--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -14,8 +14,8 @@ services:
       POSTGRES_HOST: ${POSTGRES_HOST}
     ports:
       - '5432:5432'
-    volumes:
-      - /var/lib/postgresql/data
+    # volumes:
+    #   - /var/lib/postgresql/data
     # build: ./postgres
    
   # postgresql:
