--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,13 @@
   },
   "private": true,
   "scripts": {
-    "prestart": "npm run codegen",
-    "start": "ts-node index.ts",
-    "prebuild": "npm run codegen",
+    "prestart": "yarn codegen",
+    "start": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' ./index.ts",
+    "prebuild": "yarn codegen",
     "prod": "node dist/index.js",
     "build": "tsc",
     "test": "jest --runInBand --forceExit",
-    "codegen": "graphql-codegen",
+    "codegen": "yarn graphql-codegen init",
     "format": "prettier \"**/*.ts\" --write",
     "loadtest": "yarn artillery run artillery.yml > loadtest.log",
     "loadtest:limit": "yarn artillery run artillery-limit.yml > loadtest.log"
@@ -26,9 +26,9 @@
     "@graphql-codegen/typescript": "1.14.0",
     "@graphql-codegen/typescript-resolvers": "1.14.0",
     "@types/bcrypt": "3.0.0",
-    "@types/cors": "2.8.6",
     "@types/cookie": "0.4.0",
     "@types/cookie-parser": "1.4.2",
+    "@types/cors": "2.8.6",
     "@types/express": "4.17.6",
     "@types/faker": "4.1.12",
     "@types/graphql": "14.5.0",
@@ -40,6 +40,7 @@
     "artillery": "1.6.0",
     "jest": "26.0.1",
     "jest-junit": "10.0.0",
+    "nodemon": "^2.0.4",
     "prettier": "2.0.5",
     "ts-jest": "26.0.0",
     "ts-node": "8.10.1",
