--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ Thumbs.db
 .settings/
 *.sublime-workspace
 # IDE - VSCode
+.vscode
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
