--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "@types/node": "13.9.8",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.7",
+    "@types/react-loader-spinner": "3.1.0",
     "@types/react-router-dom": "5.1.5",
     "@types/styled-components": "5.1.0",
     "apollo-cache-inmemory": "1.6.6",
@@ -49,6 +50,7 @@
     "prettier": "2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-loader-spinner": "3.1.14",
     "react-router-dom": "5.2.0",
     "react-router-transition": "2.0.0",
     "react-scripts": "3.4.1",
