--- a/client/package.json
+++ b/client/package.json
@@ -76,11 +76,15 @@
   "devDependencies": {
     "@graphql-codegen/cli": "1.13.5",
     "apollo-link-mock": "1.0.1",
+    "identity-obj-proxy": "3.0.0",
     "source-map-explorer": "2.4.2"
   },
   "jest": {
     "transformIgnorePatterns": [
       "node_modules/(?!(react-router-transition)/)"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   }
 }
