refactor: add old loading and jest config

--- a/client/package.json
+++ b/client/package.json
@@ -77,6 +77,7 @@
     "@graphql-codegen/cli": "1.13.5",
     "apollo-link-mock": "1.0.1",
     "identity-obj-proxy": "3.0.0",
+    "jest-transform-css": "2.0.0",
     "source-map-explorer": "2.4.2"
   },
   "jest": {
@@ -84,7 +85,12 @@
       "node_modules/(?!(react-router-transition)/)"
     ],
     "moduleNameMapper": {
-      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
+    },
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      ".+\\.(css|styl|less|sass|scss)$": "jest-transform-css"
     }
   }
 }
