--- a/client/package.json
+++ b/client/package.json
@@ -72,8 +72,10 @@
     ]
   },
   "devDependencies": {
+    "@apollo/react-testing": "3.1.4",
     "@graphql-codegen/cli": "1.13.5",
     "apollo-link-mock": "1.0.1",
+    "react-test-renderer": "16.13.1",
     "source-map-explorer": "2.4.2"
   },
   "jest": {
