--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "full-stack-whatsapp-clone-client",
-  "version": "1.0.0",
-  "description": "Client side from A whatsapp clone made with React, Typescript, GraphQL, and other technologies",
-  "private": true,
+  "name": "typescript-graphql-client",
+  "version": "0.0.1",
+  "description": "Client part of the TypeScript GraphQL Client Server Project",
   "author": "ramon morcillo @reymon359",
   "license": "ISC",
   "scripts": {
