--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "16.9.7",
     "@types/react-loader-spinner": "3.1.0",
     "@types/react-router-dom": "5.1.5",
+    "@types/react-tabs": "2.3.1",
     "@types/styled-components": "5.1.0",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.9",
@@ -51,6 +52,7 @@
     "react-router-dom": "5.2.0",
     "react-router-transition": "2.0.0",
     "react-scripts": "3.4.1",
+    "react-tabs": "3.1.1",
     "styled-components": "5.1.0",
     "subscriptions-transport-ws": "0.9.16",
     "typescript": "3.8.3"
