refactor: remove unused code

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "WhatsApp Clone",
-  "name": "An open source chat app",
+  "short_name": "Full Stack Social Site",
+  "name": "An open source Social Site",
   "icons": [
     {
       "src": "favicon.ico",
