--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "ramon morcillo @reymon359",
   "license": "ISC",
   "scripts": {
+    "start:server": "cd server && npm run start",
+    "start:client": "cd client && npm run start",
+    "start:all": "npm-run-all -p start:server start:client",
     "test:server": "cd server && npm run test",
     "test:client": "cd client && npm run test",
     "test:all": "npm run test:server && npm run test:client"
@@ -27,7 +30,8 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "husky": "^4.2.5"
+    "husky": "^4.2.5",
+    "npm-run-all": "^4.1.5"
   },
   "jest": {
     "transformIgnorePatterns": [
