docs: update package.jsons

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-graphql-client-server",
+  "name": "full-stack-social-site",
   "version": "1.0.0",
   "description": "Social Site made with React, Typescript, GraphQL, and other technologies",
   "private": true,
