--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-graphql-client",
+  "name": "full-stack-social-site-client",
   "version": "0.0.1",
-  "description": "Client part of the TypeScript GraphQL Client Server Project",
+  "description": "Client part of the Full Stack Social Site TypeScript GraphQL Client Server Project",
   "author": "ramon morcillo @reymon359",
   "license": "ISC",
   "scripts": {
